<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/NewCharacterDialogRoot"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/newCharacterNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/NameLabel"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:text="@string/CharacterName" />

            <EditText
                android:id="@+id/CharacterName"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:inputType="textCapWords"
                android:textSize="10sp" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/newRaceLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newCharacterNameLayout" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/RaceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/CharacterRace" />

                <Spinner
                    android:id="@+id/Races"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="false"
                    android:longClickable="false" />
            </TableRow>

            <ListView
                android:id="@+id/editDialogClassList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none" >

            </ListView>
        </TableLayout>

        <TableLayout
            android:id="@+id/StatsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newRaceLayout" >

            <TableRow
                android:id="@+id/tableRow0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/LevelLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/Level" />

                <LinearLayout>

                    <Button
                        android:id="@+id/LevelDown"
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:text="@string/LevelDownSign" />

                    <TextView
                        android:id="@+id/LevelView"
                        android:layout_width="20sp"
                        android:layout_height="50sp"
                        android:text="@string/BaseLevel" />

                    <Button
                        android:id="@+id/LevelUp"
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:text="@string/LevelUpSign" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/StrengthLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/strengthLabel" />

                <EditText
                    android:id="@+id/StrengthInput"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:textSize="10sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/DexterityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingRight="26dp"
                    android:text="@string/dexterityLabel" />

                <EditText
                    android:id="@+id/DexterityInput"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:textSize="10sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/ConstitutionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingRight="26dp"
                    android:text="@string/constitutionLabel" />

                <EditText
                    android:id="@+id/ConstitutionInput"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:textSize="10sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/IntelligenceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingRight="10dp"
                    android:text="@string/intelligenceLabel" />

                <EditText
                    android:id="@+id/IntelligenceInput"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:textSize="10sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/WisdomLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingRight="34dp"
                    android:text="@string/wisdomLabel" />

                <EditText
                    android:id="@+id/WisdomInput"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:textSize="10sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/CharismaLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingRight="25dp"
                    android:text="@string/charismaLabel" />

                <EditText
                    android:id="@+id/CharismaInput"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:textSize="10sp" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/okNewCharacter"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/okNewCharacterDialog" />

                <Button
                    android:id="@+id/cancelNewCharacter"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/cancelNewCharacterDialog" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</ScrollView>